--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "node-first",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "crypto": "1.0.1",
+    "view-design": "^4.2.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.3",
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +24,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "h-utils.js": "^0.5.3",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "uglifyjs-webpack-plugin": "^1.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
